/***************************************/
 Version 0.8.3
/***************************************/
#34 Personendaten Import: Slider Speed im Step Modifikationen erhöht. Der
   Scroll war langsam und unbrauchbar.
#35 Personendaten Import: Nach dem Import erscheint eine Dialogsmeldung. Diese 
   Meldung erscheint nun mit dem korrekten Icon. Auch die Fehlermeldung.
#51 PrintJobs: Es wurden bei den Listen überall Headers hinzugefügt. Im Header 
    ist der Inhalt definiert (bspw. Name der Einheit), Seitenzahl und Datum. 
#55 PrintJobs: Die Liste ist nun nach Datum sortiert (neustes zuerst) und wenn man 
   einen druckt wird die Liste gleich aktualisiert.
#48 Ausweise: Falls Person in der Archiv Einheit war und nun einer gültigen Einheit
   zugwiesen wird und die Person bereits ein Foto besitzt, wird ein Ausweis generiert.
#54 Printjobs: Beschreibung nun bei allen ausführlicher. Die Beschreibung wird nun
   auch in den Dateinamen genommen. Somit ist vom Dateinamen her auch ersichtlich
   was der Inhalt ist.
#56 Icon von Einstellung auf SENTINEL umstellen 
#1 ImageEditor: Wenn eine neue Person erfasst wird, die Daten nicht gespeichert 
   werden, im ImageEditor gearbeitet wird und man zurückkehrt, dann sind die
   Personendaten nicht mehr verloren. Der ImageEditor wurde mit einem Icon, Titel
   versehen und ausserdem eingemittet. Das Konzept des Dialogs wurde nun korrekt
   umgesetzt. Es gibt keine Probleme mit der Modalität mehr.
#53 PrintJobs: Es ist nun möglich alle Ausweisboxen auf einmal zu drucken. Dafür 
   wurde die bestehende Implementierung verwendet und die PDFs einfach zusammengefügt.
#58 PrintJobs: Gewisse Aktionen wie Speichern, Bearbeiten u.a. sind nicht verfügbar.
   Die Unterklasse kann nun sagen, welche Button nicht verfügbar sind. Ausserdem
   wurde der Delete Button implementiert. Printjobs können nun gelöscht werden. Die
   Pdfs werden serverseitig jedoch behalten.
#60 PrintJobs: Die Buttons zum Drucken wurden überarbeitet. Sie bekamen teilweise neue